<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, graphicsAndStateActivity!</string>
    <string name="app_name">baynes.kathleen.graphicsAndState</string>
    <string name="water">Water</string>
    <string name="heat">Heat</string>
    <string name="pulse">Pulse</string>
    <string name="alex">Apex</string>
    <string name="steam">Steam</string>
    <string name="electric_on">Elect. On</string>
    <string name="electric_off">Elect. Off</string>
    <string name="start">Start</string>
    <string name="pull">Pull</string>
    <string name="turn">Turn</string>
    <string name="clap">Clap</string>
    <string name="release">Release</string>

    <string-array name="sprite_list">
        <item>Candle</item>
        <item>Christmas Tree</item>
        <item>Clapper</item>
        <item>Cleat</item>
        <item>Electrical Outlet</item>
        <item>Kettle</item>
        <item>Clapping Monkey</item>
        <item>Rope (Down Right)</item>
        <item>Rope (Left Right)</item>
        <item>Rope (Up Down)</item>
        <item>Rope (Up Right)</item>
        <item>Rubber Band</item>
        <item>TV</item>
        <item>Water Cooler</item>
        <item>Wire (Left Right)</item>
        <item>Wire (Up Down)</item>
        <item>Pinwheel</item>
    </string-array>

</resources>